// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toast component it should render a success toast 1`] = `
<div>
  <div>
    <p>
      test
    </p>
  </div>
  <div
    class="toastWrapper"
  >
    <div
      class="container success animate"
      role="alert"
    >
      <div
        class="rightCol"
      >
        <svg
          class="h-6 w-6"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 12 2 2 4-4m6 2a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
         
        toast message
      </div>
      <div
        class="leftCol"
      >
        <button
          aria-label="dismiss"
          class="icon"
          type="button"
        >
          <svg
            class="h-6 w-6"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18 18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`toast component it should render an error toast 1`] = `
<div>
  <div>
    <p>
      test
    </p>
  </div>
  <div
    class="toastWrapper"
  >
    <div
      class="container error animate"
      role="alert"
    >
      <div
        class="rightCol"
      >
        <svg
          class="h-6 w-6"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8v4m0 4h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
         
        toast message
      </div>
      <div
        class="leftCol"
      >
        <button
          aria-label="dismiss"
          class="icon"
          type="button"
        >
          <svg
            class="h-6 w-6"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18 18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`toast component it should render an info toast 1`] = `
<div>
  <div>
    <p>
      test
    </p>
  </div>
  <div
    class="toastWrapper"
  >
    <div
      class="container info animate"
      role="alert"
    >
      <div
        class="rightCol"
      >
        <svg
          class="h-6 w-6"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
         
        toast message
      </div>
      <div
        class="leftCol"
      >
        <button
          aria-label="dismiss"
          class="icon"
          type="button"
        >
          <svg
            class="h-6 w-6"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18 18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`toast component it should render an warning toast 1`] = `
<div>
  <div>
    <p>
      test
    </p>
  </div>
  <div
    class="toastWrapper"
  >
    <div
      class="container warning animate"
      role="alert"
    >
      <div
        class="rightCol"
      >
        <svg
          class="h-6 w-6"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
         
        toast message
      </div>
      <div
        class="leftCol"
      >
        <button
          aria-label="dismiss"
          class="icon"
          type="button"
        >
          <svg
            class="h-6 w-6"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18 18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
